[package]
name = "untrustended"
version = "0.4.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "ISC"
edition = "2021"

description = "Untrustended - Untrusted Extended. A compilation of primitives for parsing values from untrusted input."
homepage = "https://github.com/oherrala/untrustended#readme"
repository = "https://github.com/oherrala/untrustended"
documentation = "https://docs.rs/untrustended/"
readme = "README.md"
keywords = [ "untrusted", "input", "parsing", "primitives" ]
categories = [ "parsing", "parser-implementations", "no-std" ]

[features]
default = [ "use_std" ]
use_std = [ ]

[dependencies]
untrusted = "0.9"

[dev-dependencies]
byteorder = { version = "1", features = [ "std" ] }
quickcheck = { version = "1", default-features = false }
