[package]
name = "untrustended"
version = "0.4.5"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "ISC"
edition = "2024"
rust-version = "1.93"

description = "Untrustended - Untrusted Extended. A compilation of primitives for parsing values from untrusted input."
homepage = "https://github.com/oherrala/untrustended#readme"
repository = "https://github.com/oherrala/untrustended"
documentation = "https://docs.rs/untrustended/"
readme = "README.md"
keywords = [ "untrusted", "input", "parsing", "primitives" ]
categories = [ "parsing", "parser-implementations", "no-std" ]

[[bench]]
name = "bench"
harness = false

[features]
default = [ "use_std" ]
use_std = [ ]

[dependencies]
untrusted = "0.9"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
pktbuilder = "0.1"
quickcheck = { version = "1", default-features = false }
